--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "~9.1.1",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.1",
@@ -23,6 +24,7 @@
     "@angular/router": "~9.1.1",
     "@types/jquery": "^3.5.0",
     "bootstrap": "^4.5.0",
+    "firebase": "^7.16.1",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
